--- a/web-container/templates/index.html
+++ b/web-container/templates/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
   <h1>💬 Dr. Legal</h1>
-  <div id="chat"></div>
-  <input type="text" id="input" placeholder="Pergunte algo..." />
+  <div id="chat">Olá! Sou o Dr. Legal. Pergunte algo sobre direitos.</div>
+  <input type="text" id="input" placeholder="Digite sua dúvida..." />
   <button id="send">Enviar</button>
 
   <script>
